--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,7 @@ repositories {
 
 dependencies {
     compile("org.springframework.boot:spring-boot-starter-web")
+    compile("org.springframework.boot:spring-boot-starter-actuator")
     providedRuntime("org.springframework.boot:spring-boot-starter-tomcat")
     compile('org.postgresql:postgresql:9.3-1102-jdbc41')
     compile("com.google.guava:guava:18.0")
